--- a/src/app/tour-of-heroes.component.html
+++ b/src/app/tour-of-heroes.component.html
@@ -1,4 +1,7 @@
 <h1>{{title}}</h1>
 <h2>{{hero.name}} details!</h2>
 <div><label>id: </label>{{hero.id}}</div>
-<div><label>name: </label>{{hero.name}}</div>
+<div>
+  <label>name: </label>
+  <input value="{{hero.name}}" placeholder="name">
+</div>
