Tour Of Heroes: Editing Hero Part 2

--- a/src/app/tour-of-heroes.component.html
+++ b/src/app/tour-of-heroes.component.html
@@ -3,5 +3,5 @@
 <div><label>id: </label>{{hero.id}}</div>
 <div>
   <label>name: </label>
-  <input value="{{hero.name}}" placeholder="name">
+  <input [(ngModel)]="hero.name" placeholder="name">
 </div>
