--- a/src/app/tour-of-heroes.component.html
+++ b/src/app/tour-of-heroes.component.html
@@ -5,3 +5,10 @@
   <label>name: </label>
   <input [(ngModel)]="hero.name" placeholder="name">
 </div>
+
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
