--- a/src/app/tour-of-heroes.component.html
+++ b/src/app/tour-of-heroes.component.html
@@ -1,9 +1,11 @@
 <h1>{{title}}</h1>
-<h2>{{selectedHero.name}} details!</h2>
-<div><label>id: </label>{{selectedHero.id}}</div>
-<div>
+<div *ngIf="selectedHero">
+  <h2>{{selectedHero.name}} details!</h2>
+  <div><label>id: </label>{{selectedHero.id}}</div>
+  <div>
     <label>name: </label>
-    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
+    <input [(ngModel)]="selectedHero.name" placeholder="name" />
+  </div>
 </div>
 
 <h2>My Heroes</h2>
